--- a/app/templates/user.hbs
+++ b/app/templates/user.hbs
@@ -19,6 +19,7 @@
           <span {{bind-attr class=':state project.workflowStateShort'}}>
             {{project.workflowState}}
           </span>
+          {{project.percentFunded}}% funded
           <span class='id'>{{project.id}}</span>
           <div class='title'>
             <a {{bind-attr href=project.url}} target=_blank>
