Add funding target to tooltip

--- a/app/templates/projects/row.hbs
+++ b/app/templates/projects/row.hbs
@@ -1,5 +1,5 @@
 <li>
-  <div class='progress-bubble hint--right hint--no-animate' data-hint="{{project.percentFunded}}% funded">
+  <div class='progress-bubble hint--right hint--no-animate' data-hint="{{project.tooltip}}">
     {{progress-bubble workflowStateShort=project.workflowStateShort percentFunded=project.percentFunded percentDuration=project.percentDuration}}
   </div>
   <span {{bind-attr class=':state project.workflowStateShort'}}>
